"""Bảng `student_profiles` — dữ liệu riêng của học sinh.

Quan hệ 1-1 với `users`, `user_id` làm khoá chính (xem lý do ở
`teacher_profile.py`).

KHÔNG có cột `class_id`. Học sinh thuộc lớp nào là việc của bảng
`class_students`: thông tin đó thay đổi theo từng năm học và phải giữ được lịch
sử. Một cột `class_id` chỉ lưu được lớp HIỆN TẠI — sang năm cập nhật sang lớp
mới là danh sách lớp năm cũ rỗng, kéo theo không tra được điểm và bài nộp của
năm học trước.
"""

import uuid
from typing import TYPE_CHECKING

from sqlalchemy import ForeignKey, String, Date
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.database.base import Base, TimestampMixin

from datetime import date

if TYPE_CHECKING:
    from app.models.class_student import ClassStudent
    from app.models.user import User

class StudentProfile(Base, TimestampMixin):
    __tablename__ = "student_profiles"

    user_id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True),
        ForeignKey("users.id", ondelete="CASCADE"),
        primary_key=True,
        comment="Vừa là khoá chính vừa là khoá ngoại — quan hệ 1-1 với users"
    )

    date_of_birth: Mapped[date | None] = mapped_column(
        Date,
        nullable=True,
        comment="Ngày sinh, định dạng YYYY-MM-DD. NULL nếu chưa biết."
    )

    phone_of_parent: Mapped[str | None] = mapped_column(
        String(20),
        nullable=True,
        comment="Số điện thoại của phụ huynh, NULL nếu chưa biết."
    )

    user: Mapped["User"] = relationship(back_populates="student_profile")

    class_memberships: Mapped[list["ClassStudent"]] = relationship(
        back_populates="student"
    )

    def __repr__(self) -> str:
        return f"<StudentProfile user_id={self.user_id}>"
