// =============================================================================
// EduAI — ERD (dbdiagram.io / dbml)
//
// Nguồn sự thật của schema là Alembic (backend-fastapi/alembic/versions).
// File này chỉ để VẼ và THẢO LUẬN. Sửa ở đây xong thì mới sửa models/ rồi mới
// sinh migration — không bao giờ đi ngược lại.
//
// Phạm vi: M1 Authentication + M2 User & Class.
// Các bảng của M3..M10 (documents, chunks, quizzes, submissions...) thêm sau,
// và đều trỏ khoá ngoại về `courses`.
// =============================================================================
//
// MÔ HÌNH: trường phổ thông, KHÔNG phải MOOC.
//
//   - Nhà trường xếp lớp. Học sinh không tự đăng ký, không có mã mời.
//   - Một lớp (10A1) có sĩ số cố định và đúng một giáo viên chủ nhiệm.
//   - Lớp đó học nhiều môn; mỗi môn do một giáo viên bộ môn khác nhau dạy.
//   - Một giáo viên chủ nhiệm tối đa một lớp mỗi năm học, nhưng dạy được
//     nhiều môn ở nhiều lớp.
//
//   users ──1:1── teacher_profiles ──┬──1:1 mỗi năm──→ classes.homeroom_teacher_id
//         │                          └──1:N──────────→ courses.teacher_id
//         └──1:1── student_profiles ──N:M qua class_students──→ classes
//
//   classes ──< class_students ....... DANH SÁCH HỌC SINH
//           └─< courses .............. mỗi môn một dòng
//   subjects ──< courses
//
// Học sinh của một `course` KHÔNG có bảng riêng: đó chính là class_students
// của courses.class_id. Đây là ý nghĩa của "lớp có sĩ số cố định, học môn nào
// cũng là nhóm học sinh đó".
//
// -----------------------------------------------------------------------------
// GIỚI HẠN CỦA DBML — những thứ CÓ trong models/ nhưng DBML không vẽ được:
//
//   1. CHECK constraint. Bảng `users` có:
//        ck_users_has_login_method:
//          CHECK (hashed_password IS NOT NULL OR google_id IS NOT NULL)
//      → không cho tạo user không đăng nhập được bằng cách nào (BR-AUTH-07).
//
//   2. Partial index. Bảng `class_students` có:
//        uq_class_students_active_student:
//          UNIQUE (student_id) WHERE left_at IS NULL
//      → một học sinh chỉ ĐANG học đúng một lớp, nhưng vẫn giữ đủ lịch sử
//        các lớp cũ (những dòng đã có left_at).
//
//   3. Sĩ số lớp. KHÔNG có cột `number_of_students`. Đây là dữ liệu dẫn xuất:
//        SELECT count(*) FROM class_students
//         WHERE class_id = :id AND left_at IS NULL
//      Nuôi một cột đếm sẵn thì mọi đường ghi (xếp lớp / chuyển lớp / thôi học)
//      đều phải nhớ cập nhật, quên một chỗ là số liệu sai vĩnh viễn.
// =============================================================================

// --- Enum --------------------------------------------------------------------
// Giá trị lưu xuống DB là chữ THƯỜNG (app/constants/index.py dùng
// values_callable để ép SQLAlchemy lưu .value chứ không lưu tên member).
// Frontend đọc đúng các chuỗi này trong JWT và trong response.

Enum user_role {
  admin
  teacher
  student
}

Enum term {
  hk1
  hk2
  ca_nam [note: 'Môn dạy suốt năm, không chia học kỳ']
}

Enum course_status {
  active
  archived [note: 'Hết học kỳ: ẩn khỏi danh sách chính, giữ nguyên dữ liệu']
}

// --- M1: Authentication ------------------------------------------------------

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique, note: 'Luôn lưu chữ thường (BR-AUTH-01)']
  full_name varchar(255) [not null]
  avatar_url varchar(512)
  role user_role [not null, default: 'student', note: 'Đăng ký tự do luôn ra student (BR-AUTH-06)']
  hashed_password varchar(255) [note: 'NULL nếu chỉ đăng nhập bằng Google (BR-AUTH-07)']
  google_id varchar(255) [unique, note: 'Trường sub của Google, NULL nếu chưa liên kết (FR-AUTH-05/06)']
  is_active boolean [not null, default: true, note: 'false = bị Admin khoá (FR-AUTH-11)']
  last_login_at timestamptz [note: 'Cột hiển thị ở màn Admin quản lý user (UC-CRS-11)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (role, is_active) [note: 'Màn Admin lọc theo role + trạng thái']
  }

  Note: 'CHECK ck_users_has_login_method: hashed_password IS NOT NULL OR google_id IS NOT NULL'
}

// --- M2: User & Class --------------------------------------------------------

Table teacher_profiles {
  user_id uuid [pk, note: 'Vừa là PK vừa là FK — quan hệ 1-1 với users']
  address varchar(255)
  phone varchar(20)
  specialization varchar(255) [note: 'Bộ môn chính, ví dụ Toán']
  office varchar(255) [note: 'Phòng làm việc']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Có dòng ở đây = được phân công dạy. courses.teacher_id và classes.homeroom_teacher_id đều trỏ về bảng này chứ không về users.id, nên Postgres tự chặn việc xếp một học sinh đi dạy.'
}

Table student_profiles {
  user_id uuid [pk, note: 'Vừa là PK vừa là FK — quan hệ 1-1 với users']
  date_of_birth date [note: 'YYYY-MM-DD']
  phone_of_parent varchar(20)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'KHÔNG có cột class_id. Học sinh thuộc lớp nào là việc của class_students — một cột class_id chỉ lưu được lớp HIỆN TẠI, sang năm cập nhật là mất sạch danh sách lớp năm cũ.'
}

Table classes {
  id uuid [pk, default: `gen_random_uuid()`]
  class_name varchar(100) [not null, note: 'Ví dụ: 11A8']
  academic_year varchar(9) [not null, note: 'Dạng 2025-2026']
  homeroom_teacher_id uuid [note: 'Giáo viên chủ nhiệm. NULL khi chưa phân công']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (class_name, academic_year) [unique, note: 'Không thể có hai lớp 10A1 trong cùng một năm học']
    (homeroom_teacher_id, academic_year) [unique, note: 'Một GVCN tối đa một lớp mỗi năm học. Postgres coi mọi NULL là khác nhau nên nhiều lớp chưa phân công vẫn hợp lệ']
  }

  Note: 'Mỗi dòng là một lớp CỦA MỘT NĂM HỌC cụ thể. 10A1 năm 2025-2026 và 11A1 năm 2026-2027 là hai dòng khác nhau, kể cả khi cùng một nhóm học sinh. Tên bảng là classes, tên class Python là SchoolClass vì class là từ khoá Python.'
}

Table class_students {
  class_id uuid [not null]
  student_id uuid [not null]
  enrolled_at timestamptz [not null, default: `now()`, note: 'Ngày được xếp vào lớp']
  left_at timestamptz [note: 'NULL = đang học. Có giá trị = đã chuyển lớp hoặc thôi học']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (class_id, student_id) [pk]
    student_id [note: 'FK không được Postgres tự index, mà PK ghép dẫn đầu bằng class_id — cần index riêng để tra lịch sử lớp của một học sinh']
  }

  Note: 'NGUỒN SỰ THẬT DUY NHẤT về "ai học lớp này". Danh sách gắn vào LỚP, không gắn vào từng môn. Thêm: UNIQUE (student_id) WHERE left_at IS NULL — một học sinh chỉ đang học một lớp.'
}

Table courses {
  id uuid [pk, default: `gen_random_uuid()`]
  class_id uuid [not null, note: 'Lớp nào học']
  subject_id uuid [not null, note: 'Môn gì']
  teacher_id uuid [not null, note: 'Ai dạy — đúng một giáo viên (BR-CRS-01)']
  term term [not null, default: 'ca_nam']
  description text [note: 'Mô tả chi tiết về lớp học phần']
  status course_status [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (class_id, subject_id, term) [unique, note: 'Một lớp không học cùng một môn hai lần trong cùng một học kỳ']
    teacher_id [note: 'Màn "các lớp tôi dạy" của giáo viên']
    subject_id [note: 'Lọc theo môn + tăng tốc kiểm tra RESTRICT khi xoá môn']
  }

  Note: 'Đơn vị dạy học, và là thứ mà mọi module AI treo vào: documents, quizzes, chat_sessions, analytics_snapshots của M3..M9 đều có course_id trỏ về đây.'
}

Table subjects {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar(20) [not null, unique, note: 'Mã ngắn, ví dụ TOAN — dùng để hiển thị và import danh sách']
  name varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'PK là uuid như mọi bảng khác, mã môn nằm ở cột code có unique. Lấy code làm PK thì đổi mã sẽ kéo theo phải sửa mọi khoá ngoại trỏ tới.'
}

// --- Khoá ngoại --------------------------------------------------------------
// ON DELETE nói rõ ý đồ:
//   cascade  = dữ liệu con vô nghĩa nếu thiếu cha (xoá lớp thì xoá danh sách môn)
//   restrict = chặn xoá để khỏi mất lịch sử (còn lớp đang dạy thì không xoá môn)
//   set null = quan hệ tuỳ chọn (GVCN nghỉ thì lớp thành chưa phân công)

Ref: users.id - teacher_profiles.user_id [delete: cascade]
Ref: users.id - student_profiles.user_id [delete: cascade]

Ref: classes.homeroom_teacher_id > teacher_profiles.user_id [delete: set null]

Ref: class_students.class_id > classes.id [delete: cascade]
Ref: class_students.student_id > student_profiles.user_id [delete: restrict]

Ref: courses.class_id > classes.id [delete: cascade]
Ref: courses.subject_id > subjects.id [delete: restrict]
Ref: courses.teacher_id > teacher_profiles.user_id [delete: restrict]
